Fix border shift

--- a/browser/styles/main/ArticleNavigator.styl
+++ b/browser/styles/main/ArticleNavigator.styl
@@ -11,6 +11,7 @@ articleCount = #999
   .userInfo
     height 60px
     display block
+    box-sizing content-box
     border-bottom 1px solid borderColor
     .userProfileName
       color brandColor
